# OFinder

./: LICENSE  README.md
Ofinder/: Ofinder.opam  dune-project  ofz.sh  target_dir.txt
Ofinder/_build/: .db  .db 2  .digest-db  .digest-db 2  log
Ofinder/_build/default/: Ofinder.dune-package  Ofinder.install  Ofinder.opam
Ofinder/_build/default/.dune/: configurator  configurator.v2
Ofinder/_build/default/.ppx/bfcab61e6a21ecf6d2f80029fc1ef484/: dune__exe___ppx.cmi  dune__exe___ppx.cmo  dune__exe___ppx.cmx
Ofinder/_build/default/lib/: Loop_nav.ml  Ls.ml  cli.ml  hello.ml  levenshtein.ml  lib.cma  lib.cmxa  lib.cmxs  lib.ml-gen  match_str.ml
Ofinder/_build/default/lib/.lib.objs/: lib__Cli.impl.d  lib__Hello.impl.d  lib__Levenshtein.impl.d  lib__List_fd.impl.d  lib__Loop_nav.impl.all-deps  lib__Loop_nav.impl.d  lib__Ls.impl.d  lib__Match_str.impl.d  lib__Monad_sort.impl.d
Ofinder/_build/default/lib/.lib.objs/byte/: lib.cmi  lib.cmo  lib.cmt  lib__Cli.cmi  lib__Cli.cmo  lib__Cli.cmt  lib__Hello.cmi  lib__Hello.cmo  lib__Hello.cmt  lib__Levenshtein.cmi  lib__Levenshtein.cmo  lib__Levenshtein.cmt  lib__List_fd.cmi  (+14 more)
Ofinder/_build/default/lib/.merlin-conf/: lib-lib
Ofinder/_build/default/test/: Ofinder.cma  Ofinder.cmxa  Ofinder.cmxs  Ofinder.ml  Ofinder.pp.ml
Ofinder/_build/default/test/.Ofinder.inline-tests/: inline_test_runner_Ofinder.ml-gen  partitions-best
Ofinder/_build/default/test/.merlin-conf/: exe-Ofinder  lib-Ofinder
Ofinder/lib/: Levenshtein.txt  Loop_nav.ml  Ls.ml  cli.ml  dune  list_fd.ml  match_str.ml
Ofinder/test/: Ofinder.ml  dune
(+23 files in other folders)
