(lang dune 3.7)

(name Ofinder)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Ryan Williams")

(maintainers "Ryan Williams")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name Ofinder)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends curses ocaml dune base stdio inline_tests ppx_inline_test)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
